starting edits per 4.30.24 meeting

--- a/inst/app/www/mod_background_methods_text.html
+++ b/inst/app/www/mod_background_methods_text.html
@@ -1,5 +1,5 @@
+<div style="column-count: 2;column-gap: 20px;">
 
-<div>
 <p>Implementing Emmett (2008) – Pacific Hake data:</p>
 <ul>
 <li>Emmett (2008), page 5, boxplot image was inserted into
