update welcome to about page and move app text to default page sumarry intro

--- a/inst/app/www/mod_subpage4_summary_text.html
+++ b/inst/app/www/mod_subpage4_summary_text.html
@@ -4,5 +4,5 @@
   <li>predator risk from Northern Pikeminnow, <em>Ptychocheilus oregonensis</em>, and Pacific Hake, <em>Merluccius productus</em>,</li>
   <li>and survival across years and seasons.</li>
 </ul>
-<p>To interact with the app, select the <b>SizePred Survival App</b> tab in the side menu. To learn more about how this application can inform survival, please see <b>Overview</b>.</p>
+<p>To interact with the app, select factors of interest below or dive deeper by selecting specific tabs in the <b>SizePred Survival App</b> side menu. To learn more about how this application can inform survival, please see <b>Overview</b>.</p>
 
