add exploratory took warning on home page

--- a/inst/app/www/mod_subpage4_summary_text.html
+++ b/inst/app/www/mod_subpage4_summary_text.html
@@ -6,3 +6,6 @@
 </ul>
 <p>To interact with the app, select factors of interest below or dive deeper by selecting specific tabs in the <b>SizePred Survival App</b> side menu. To learn more about how this application can inform survival, please see <b>Overview</b>.</p>
 
+<p><em>Please note that this Shiny App is dependent on data availability and serves as an exploratory tool.</em>
+
+
